# zkmc

./: .gitignore  Cargo.toml  README.md  check_err.py  map_strongholds.py
lib/: Cargo.toml
lib/src/: lib.rs  minecraft.rs  noise.rs  tree.rs  xoroshiro.rs
lib/src/minecraft/: biome.rs  biome_btree.rs  biome_tree.rs  chunk.rs  climate.rs
lib/src/rng/: java_rand.rs  mod.rs  xoroshiro.rs
lib/src/util/: fixed_noise.rs  mod.rs  noise_f32.rs  spline.rs
mc-dev/: Cargo.toml
mc-dev/src/: main.rs
program/: Cargo.toml
program/src/: main.rs
rand_test/: Rand.java
script/: Cargo.toml
script/src/: main.rs
