[package]
version = "0.1.0"
name = "mc-script"
edition = "2021"

[dependencies]
sp1-sdk = { version = "6.0.1", features = ["blocking", "native-gnark"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
mc-lib = { path = "../lib" }
tokio = "1.51.0"
hex = "0.4.3"
tracing = "0.1.44"

[build-dependencies]
sp1-build = { version = "6.0.1" }
